--- a/style.css
+++ b/style.css
@@ -8,13 +8,13 @@ body {
     margin: 30px 0px;
 }
 i{
-    color: blue;
+    color: rgb(33, 125, 229);
 }
 .cont{
     margin:10px 0px;
 }
 a{
-    border-bottom: 2px solid rgb(63, 63, 242);
+    border-bottom: 2px solid rgb(57, 116, 244);
 }
 box {
     padding: 70px 5px;
